correcion en la musica

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         </header>
 
         <section class="video-container">
-            <iframe src="https://www.youtube.com/embed/yZf6vEP1Xo4?autoplay=1&mute=1"
+            <iframe src="https://www.youtube.com/embed/yZf6vEP1Xo4"
                     title="Video del Día del Padre"
                     frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen>
             </iframe>
         </section>
 
         <div class="music-message">
             <div class="icon">🎵</div>
-            <p>Primero disfruta de la música de fondo</p>
+            <p>Haz clic en el video para reproducir la música de fondo</p>
         </div>
 
         <section class="camera-section">
