--- a/index.html
+++ b/index.html
@@ -45,6 +45,28 @@
         </div>
     </div>
 
+     <!-- Sección del video obligatorio -->
+<div id="videoScreen" class="video-screen" style="display: none;">
+    <div class="video-screen-container">
+        <h2>Si tu hijo no te dio un regalo ya sabes las razones</h2>
+
+        <div class="video-player-container">
+            <video id="mandatory-video" width="100%" height="auto" controls>
+                <source src="cuota_fiesta.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de video.
+            </video>
+        </div>
+
+        <button id="continue-after-video" class="continue-btn" style="display: none;" disabled>
+            Continuar al sitio
+        </button>
+
+        <div class="video-progress">
+            <p id="video-status">Reproduce el video para continuar...</p>
+        </div>
+    </div>
+</div>
+
     <div id="mainContent" class="main-content">
         <header class="page-header">
             <h1>Celebración del Día del Padre 2025</h1>
